--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     }
     
     .timetable th {
-      animation: spin 5s linear infinite;
+      animation: spin 5s ;
     }
   </style>
 </head>
