--- a/index.html
+++ b/index.html
@@ -95,27 +95,27 @@
     </tr>
     <tr>
       <td>09:00 - 10:00</td>
+      <td>Web Design</td>
+      <td>C#</td>
+      <td>DT</td>
       <td>Math</td>
-      <td>English</td>
-      <td>Science</td>
-      <td>History</td>
-      <td>Math</td>
+      <td>QBasic</td>
     </tr>
     <tr>
       <td>10:00 - 11:00</td>
-      <td>English</td>
+      <td>Java</td>
+      <td>Python</td>
+      <td>C#</td>
       <td>Math</td>
-      <td>Geography</td>
-      <td>Math</td>
-      <td>Science</td>
+      <td>Library</td>
     </tr>
     <tr>
       <td>11:00 - 12:00</td>
-      <td>Science</td>
-      <td>History</td>
-      <td>English</td>
-      <td>Science</td>
-      <td>History</td>
+      <td>Java</td>
+      <td>Math</td>
+      <td>C#</td>
+      <td>Java</td>
+      <td>QBasic</td>
     </tr>
     <tr>
       <td>12:00 - 01:00</td>
@@ -123,22 +123,26 @@
     </tr>
     <tr>
       <td>01:00 - 02:00</td>
-      <td>History</td>
-      <td>Geography</td>
+      <td>Java</td>
+      <td>QBasic</td>
       <td>Math</td>
-      <td>English</td>
-      <td>Geography</td>
+      <td>C#</td>
+      <td>DSA</td>
     </tr>
     <tr>
       <td>02:00 - 03:00</td>
-      <td>Geography</td>
-      <td>Science</td>
-      <td>History</td>
-      <td>Geography</td>
-      <td>English</td>
+      <td>DSA</td>
+      <td>Math</td>
+      <td>DT</td>
+      <td>Web Design</td>
+      <td>C#</td>
     </tr>
-  </table>
+  </table><br><br>
+  <footer>
+    &copy Harsh Bhatt
+  </footer>
 </div>
+
 
 </body>
 </html>
